<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.virginmoneychallenge.ui.colleagues.ColleagueFragment"
        android:label="@string/title_colleague"
        tools:layout="@layout/fragment_colleague" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_detail_colleague"
            app:destination="@id/navigation_detail_colleague" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.virginmoneychallenge.ui.room.RoomFragment"
        android:label="@string/rooms"
        tools:layout="@layout/fragment_room" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.virginmoneychallenge.ui.notifications.NotificationsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_detail_colleague"
        android:name="com.example.virginmoneychallenge.ui.colleagues.ColleagueDetailFragmeny"
        android:label="@string/settings"
        tools:layout="@layout/fragment_notifications" />

</navigation>