<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">


    <TextView
        android:id="@+id/tv_created_date"
        android:layout_width="319dp"
        android:layout_height="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="7dp"
        android:fontFamily="@font/timesnewromancelightvgg"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_occupancy"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/created_date" />

    <TextView
        android:id="@+id/tv_occupancy"
        android:layout_width="325dp"
        android:layout_height="19dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/timesnewromancelightvgg"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_is_occupy"
        tools:text="@string/occupancy" />

    <TextView
        android:id="@+id/tv_is_occupy"
        android:layout_width="315dp"
        android:layout_height="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/timesnewromancelightvgg"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/is_occupied" />

    <ImageView
        android:id="@+id/iv_availibility"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toStartOf="@+id/tv_occupancy"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/greencheck" />
</androidx.constraintlayout.widget.ConstraintLayout>